--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
 {
-  "name": "myapp"
+  "name": "myapp",
+  "scripts": {
+    "build": "webpack"
+  },
+  "dependencies": {
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
