--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build": "webpack"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
