--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.1",
     "html-webpack-plugin": "^3.2.0",
