--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "preact": "^10.3.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
