--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,5 +1,12 @@
 {
   "presets": [
-    "@babel/preset-env"
+    "@babel/env",
+    ["@babel/typescript", { "jsxPragma": "h" }]
+  ],
+  "plugins": [
+    ["@babel/transform-react-jsx", {
+      "pragma": "h",
+      "pragmaFrag": "Fragment"
+    }]
   ]
 }
