--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,2 +1,9 @@
 {
+  "compilerOptions": {
+    "jsx": "preserve",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
+    "module": "ESNext",
+    "moduleResolution": "node"
+  }
 }
