--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "css-loader": "^3.5.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
