--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "myapp",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack server --open"
   },
   "dependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.1",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
